big clean up and simplification of in-progress portfolio page design work

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 permalink:           pretty
 
 # Setup
-title:               Wesley
-tagline:             Lindamood
+title:               Wesley Lindamood
+tagline:             
 url:                 http://lindamood.org
 paginate:            1
 paginate_path: "/blog/page:num/"
