--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@ title: Wesley Lindamood
 author: Wesley Lindamood
 name: lindamood
 email: hi@lindamood.org
-description: An accomplished design leader with a proven track record in user experience design and front-end development.
+description: I'm a project manager and design leader with a proven track record in user experience design.
 
-show_excerpts: false # set to true to show excerpts on the homepage
+show_excerpts: true # set to true to show excerpts on the homepage
 
 # Minima date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
@@ -13,26 +13,13 @@ minima:
 
   # generate social links in footer
   social_links:
-    - { platform: devto,          user_url: "https://dev.to/jekyll" }
-    - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
-    - { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
-    - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
-    - { platform: github,         user_url: "https://github.com/jekyll/minima" }
-    - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
-    - { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
-    - { platform: keybase,        user_url: "https://keybase.io/jekyll" }
-    - { platform: linkedin,       user_url: "https://www.linkedin.com/in/jekyll" }
-    - { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
-    - { platform: pinterest,      user_url: "https://www.pinterest.com/jekyll" }
-    - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/1234567/jekyll" }
-    - { platform: telegram,       user_url: "https://t.me/jekyll" }
-    - { platform: twitter,        user_url: "https://twitter.com/jekyllrb" }
-    - { platform: youtube,        user_url: "https://www.youtube.com/jekyll" }
+    - { platform: github,         user_url: "https://github.com/lindamood" }
+ 
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
-#header_pages:
-# - about.md
+header_pages:
+ - portfolio.md
 
 # Build settings
 theme: minima
